# wedding_monte_carlo

./: .gitignore  cleaning_guest_list.ipynb  guest_list_anonymized.csv  pyproject.toml  wedding_monte_carlo.ipynb  wedding_monte_carlo_all_or_none.ipynb
results/: wedding_monte_carlo_results.csv  wedding_monte_carlo_results_all_or_none.csv
